# rust-actix-auth

./: .env.dist  .gitignore  Cargo.toml
migrations/2019-07-23-132933_create_auth_users/: down.sql  up.sql
src/: controllers.rs  dataservice.rs  lib.rs  main.rs  models.rs  schema.rs
